--- a/draft_1.ipynb
+++ b/draft_1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "044231e9",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "70246f3e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "64e1ca9f",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "c62817a0",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "list"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "e0ad4877",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "1920"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "f1665bcd",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "48f18053",
    "metadata": {},
    "outputs": [
@@ -137,24 +137,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5a3fec80",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KL_a01.wav\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mylist[1800])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4bf170ac",
    "metadata": {},
@@ -164,27 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "344d9529",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, sampling_rate = librosa.load('I:/major 1/Emotion-Detection-and-Analysis-through-Audio/dataset/merged/03-01-01-01-01-01-13.wav')"
+    "data, sampling_rate = librosa.load('dataset/merged/03-01-01-01-01-01-13.wav')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "37748f2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<librosa.display.AdaptiveWaveplot at 0x236b03ea610>"
+       "<librosa.display.AdaptiveWaveplot at 0x2127a9d8c50>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "d2760c32",
    "metadata": {},
    "outputs": [
@@ -277,34 +259,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "54109411",
+   "execution_count": 31,
+   "id": "b9c3b127",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sa'"
+       "1920"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mylist[1900][3:5]"
+    "len(mylist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 106,
+   "id": "f78a169b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03-01-01-01-01-01-01.wav\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mylist[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "9d894dc7",
    "metadata": {},
    "outputs": [],
    "source": [
     "feeling_list=[]\n",
+    "count = 0\n",
+    "\n",
     "for item in mylist:\n",
+    "    if item[6:-16]=='01' and int(item[18:-4])%2==0:\n",
+    "        feeling_list.append('female_neutral')\n",
+    "    elif item[6:-16]=='01' and int(item[18:-4])%2==1:\n",
+    "        feeling_list.append('male_neutral')\n",
     "    if item[6:-16]=='02' and int(item[18:-4])%2==0:\n",
     "        feeling_list.append('female_calm')\n",
     "    elif item[6:-16]=='02' and int(item[18:-4])%2==1:\n",
@@ -325,8 +331,18 @@
     "        feeling_list.append('female_fearful')\n",
     "    elif item[6:-16]=='06' and int(item[18:-4])%2==1:\n",
     "        feeling_list.append('male_fearful')\n",
+    "    if item[6:-16]=='07' and int(item[18:-4])%2==0:\n",
+    "        feeling_list.append('female_disgust')\n",
+    "    elif item[6:-16]=='07' and int(item[18:-4])%2==1:\n",
+    "        feeling_list.append('male_disgust')\n",
+    "    if item[6:-16]=='08' and int(item[18:-4])%2==0:\n",
+    "        feeling_list.append('female_surprise')\n",
+    "    elif item[6:-16]=='08' and int(item[18:-4])%2==1:\n",
+    "        feeling_list.append('male_surprise')\n",
     "    elif item[3:4]=='a':\n",
     "        feeling_list.append('male_angry')\n",
+    "    elif item[3:4] == 'd': \n",
+    "        feeling_list.append('male_disgust')\n",
     "    elif item[3:4]=='f':\n",
     "        feeling_list.append('male_fearful')\n",
     "    elif item[3:4]=='h':\n",
@@ -341,17 +357,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 121,
+   "id": "7bd115fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1920"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(feeling_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "da7d1906",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'male_neutral': 48,\n",
+       "         'female_neutral': 48,\n",
+       "         'male_calm': 96,\n",
+       "         'female_calm': 96,\n",
+       "         'male_happy': 156,\n",
+       "         'female_happy': 96,\n",
+       "         'male_sad': 156,\n",
+       "         'female_sad': 96,\n",
+       "         'male_angry': 156,\n",
+       "         'female_angry': 96,\n",
+       "         'male_fearful': 156,\n",
+       "         'female_fearful': 96,\n",
+       "         'male_disgust': 156,\n",
+       "         'female_disgust': 96,\n",
+       "         'male_surprise': 156,\n",
+       "         'female_surprise': 96,\n",
+       "         'neutral': 120})"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(feeling_list)\n",
+    "#getting count of all unique values of dataframe\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "Counter(feeling_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "id": "cfce4ff0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dataframe creation of labels\n",
     "labels = pd.DataFrame(feeling_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 124,
    "id": "5e684965",
    "metadata": {},
    "outputs": [
@@ -382,69 +462,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>male_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>female_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>male_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>female_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>male_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>female_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>male_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>female_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>male_neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>male_angry</td>\n",
+       "      <td>female_neutral</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            0\n",
-       "0  male_angry\n",
-       "1  male_angry\n",
-       "2  male_angry\n",
-       "3  male_angry\n",
-       "4  male_angry\n",
-       "5  male_angry\n",
-       "6  male_angry\n",
-       "7  male_angry\n",
-       "8  male_angry\n",
-       "9  male_angry"
+       "                0\n",
+       "0    male_neutral\n",
+       "1  female_neutral\n",
+       "2    male_neutral\n",
+       "3  female_neutral\n",
+       "4    male_neutral\n",
+       "5  female_neutral\n",
+       "6    male_neutral\n",
+       "7  female_neutral\n",
+       "8    male_neutral\n",
+       "9  female_neutral"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "labels[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "edaecd3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1920, 1)"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b0cca8",
+   "metadata": {},
+   "source": [
+    "<H3><b> all the labels for the whole data transformed into dataframe </h3>"
    ]
   },
   {
