basic cnn model created

--- a/draft_1.ipynb
+++ b/draft_1.ipynb
@@ -2638,6 +2638,128 @@
    "source": [
     "X_train.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "502d45f5",
+   "metadata": {},
+   "source": [
+    "<h1><b>Changing Dimension for CNN model</b></h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a4f71429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_traincnn =np.expand_dims(X_train, axis=2)\n",
+    "x_testcnn= np.expand_dims(X_test, axis=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a6a98688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nites\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\optimizers\\legacy\\rmsprop.py:143: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+      "  super().__init__(name, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Conv1D(256, 5,padding='same',\n",
+    "                 input_shape=(216,1)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Conv1D(128, 5,padding='same'))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dropout(0.1))\n",
+    "model.add(MaxPooling1D(pool_size=(8)))\n",
+    "model.add(Conv1D(128, 5,padding='same',))\n",
+    "model.add(Activation('relu'))\n",
+    "#model.add(Conv1D(128, 5,padding='same',))\n",
+    "#model.add(Activation('relu'))\n",
+    "#model.add(Conv1D(128, 5,padding='same',))\n",
+    "#model.add(Activation('relu'))\n",
+    "#model.add(Dropout(0.2))\n",
+    "model.add(Conv1D(128, 5,padding='same',))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(17))\n",
+    "model.add(Activation('softmax'))\n",
+    "opt = keras.optimizers.RMSprop(lr=0.0001, decay=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b07599c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv1d (Conv1D)             (None, 216, 256)          1536      \n",
+      "                                                                 \n",
+      " activation (Activation)     (None, 216, 256)          0         \n",
+      "                                                                 \n",
+      " conv1d_1 (Conv1D)           (None, 216, 128)          163968    \n",
+      "                                                                 \n",
+      " activation_1 (Activation)   (None, 216, 128)          0         \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 216, 128)          0         \n",
+      "                                                                 \n",
+      " max_pooling1d (MaxPooling1D  (None, 27, 128)          0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv1d_2 (Conv1D)           (None, 27, 128)           82048     \n",
+      "                                                                 \n",
+      " activation_2 (Activation)   (None, 27, 128)           0         \n",
+      "                                                                 \n",
+      " conv1d_3 (Conv1D)           (None, 27, 128)           82048     \n",
+      "                                                                 \n",
+      " activation_3 (Activation)   (None, 27, 128)           0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 3456)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 17)                58769     \n",
+      "                                                                 \n",
+      " activation_4 (Activation)   (None, 17)                0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 388,369\n",
+      "Trainable params: 388,369\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "bf3401f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='categorical_crossentropy', optimizer=opt,metrics=['accuracy'])"
+   ]
   }
  ],
  "metadata": {
