model saved locally. model loaded from local

--- a/draft_1.ipynb
+++ b/draft_1.ipynb
@@ -3210,6 +3210,93 @@
     "plt.legend(['train', 'test'], loc='upper left')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7dffa0",
+   "metadata": {},
+   "source": [
+    "<h1><b>Saving the model</b></h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2fb2a71e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved trained model at i:\\major 1\\Emotion-Detection-and-Analysis-through-Audio\\saved_models\\Emotion_Voice_Detection_Model_200_0.0001_epoch.h5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = 'Emotion_Voice_Detection_Model_200_0.0001_epoch.h5'\n",
+    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
+    "# Save model and weights\n",
+    "if not os.path.isdir(save_dir):\n",
+    "    os.makedirs(save_dir)\n",
+    "model_path = os.path.join(save_dir, model_name)\n",
+    "model.save(model_path)\n",
+    "print('Saved trained model at %s ' % model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "74ee3daf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "model_json = model.to_json()\n",
+    "with open(\"model.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3e3ed37",
+   "metadata": {},
+   "source": [
+    "<h1><b>Loading the model</b></h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "aead461c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model from disk\n",
+      "accuracy: 57.07%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loading json and creating model\n",
+    "from keras.models import model_from_json\n",
+    "json_file = open('model.json', 'r')\n",
+    "loaded_model_json = json_file.read()\n",
+    "json_file.close()\n",
+    "loaded_model = model_from_json(loaded_model_json)\n",
+    "# load weights into new model\n",
+    "# \"I:\\major 1\\Emotion-Detection-and-Analysis-through-Audio\\saved_models\\\"\n",
+    "loaded_model.load_weights(\"saved_models/Emotion_Voice_Detection_Model_400_0.0001_epoch.h5\")\n",
+    "print(\"Loaded model from disk\")\n",
+    " \n",
+    "# evaluate loaded model on test data\n",
+    "loaded_model.compile(loss='categorical_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "score = loaded_model.evaluate(x_testcnn, y_test, verbose=0)\n",
+    "print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
+   ]
   }
  ],
  "metadata": {
