--- a/draft_1 .ipynb
+++ b/draft_1 .ipynb
@@ -3297,6 +3297,362 @@
     "score = loaded_model.evaluate(x_testcnn, y_test, verbose=0)\n",
     "print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28b1738b",
+   "metadata": {},
+   "source": [
+    "<h1><b>Predicting emotions on the test data</b></h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b11eb8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13/13 [==============================] - 0s 13ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = loaded_model.predict(x_testcnn, \n",
+    "                         batch_size=32, \n",
+    "                         verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "75e44ca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.4117588e-12, 9.9926168e-01, 7.3835859e-04, ..., 8.1189379e-27,\n",
+       "        1.9128500e-17, 0.0000000e+00],\n",
+       "       [2.0676848e-01, 7.6346401e-17, 5.0487203e-21, ..., 2.7323890e-10,\n",
+       "        1.7002071e-10, 0.0000000e+00],\n",
+       "       [2.7468083e-11, 3.1622323e-11, 1.7945719e-16, ..., 3.5578552e-08,\n",
+       "        1.7787070e-07, 0.0000000e+00],\n",
+       "       ...,\n",
+       "       [5.3995247e-10, 0.0000000e+00, 3.1369959e-33, ..., 1.1259034e-08,\n",
+       "        2.9022087e-04, 1.1693156e-33],\n",
+       "       [8.7822616e-01, 1.5427750e-24, 1.7251117e-10, ..., 6.6179176e-12,\n",
+       "        4.3171233e-10, 4.2591556e-38],\n",
+       "       [7.6613816e-18, 2.0839748e-35, 2.3286285e-38, ..., 8.8218475e-14,\n",
+       "        1.4387107e-21, 8.5276371e-19]], dtype=float32)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "cd9a5132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds1=preds.argmax(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f22d69f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  8,  7, 11,  6,  7,  6,  4,  4,  7, 14, 15, 10, 16,  1,  0, 15,\n",
+       "       15,  2, 12, 11, 16, 16, 16,  9, 11,  8,  7,  9, 15,  0,  8, 14, 11,\n",
+       "       16,  6, 10,  1, 13,  7,  3,  4,  8,  1, 14,  8,  8, 16, 10, 10,  6,\n",
+       "        4,  3,  2,  3, 14, 15,  9,  8, 11,  9, 16, 10, 11, 14, 13, 10, 15,\n",
+       "       12, 16,  0, 14, 12,  2, 10, 16, 13, 16, 15,  6,  4, 15, 10,  9,  7,\n",
+       "       14, 16,  7, 10,  3, 15, 14,  8, 10, 13, 10, 10,  2, 14, 11, 12, 15,\n",
+       "       16,  7,  7,  3,  6, 12,  3, 11,  2, 15, 11,  6,  7, 14,  0, 10,  9,\n",
+       "        1,  8,  9, 11, 16, 15,  0, 15,  5,  2,  4, 10,  7,  2, 13,  2, 13,\n",
+       "       12, 14,  9,  8, 16,  3,  8, 11, 10,  3,  8,  6,  2,  6, 14, 10, 10,\n",
+       "        4, 10,  0,  6,  4, 10, 15, 15, 11, 14, 16, 10,  1,  7,  8,  4,  0,\n",
+       "       14, 14,  0, 14, 16, 14,  6,  1,  3, 15, 15, 14, 16,  5,  0, 15, 15,\n",
+       "        0,  8,  1,  1,  8, 13,  3,  8,  3,  8, 15,  3, 16, 14,  8,  6,  9,\n",
+       "       15, 12, 12,  6,  4,  2,  6,  9, 11, 12,  0, 15, 10, 12,  8, 11,  7,\n",
+       "        1,  2,  6,  8,  0, 15, 10, 11,  5,  2,  9, 10,  9,  0, 11, 10,  3,\n",
+       "       15, 16, 16,  6,  8, 16,  7, 14, 11, 10, 15, 10,  9,  1, 11,  7, 15,\n",
+       "        2, 13, 10, 11, 10, 14, 14, 10, 14, 16, 15,  4, 12, 15,  6,  8,  8,\n",
+       "       14,  6, 14,  9,  1, 15,  7,  1, 10, 15,  6, 10,  1,  7, 12, 10,  8,\n",
+       "       15, 11,  8,  8, 16,  2, 16,  9, 11, 15,  1,  4, 16, 13,  0,  0,  9,\n",
+       "        1,  7, 14, 15, 15,  4,  4, 12,  9,  5, 10,  0,  9,  0, 10, 15,  1,\n",
+       "       13,  0, 15, 11,  4, 16,  8, 10,  9,  6, 16,  7, 14, 16, 14, 10, 15,\n",
+       "       10,  8, 12, 11, 12, 14,  4,  9,  1,  8,  6,  8, 16, 15,  4, 12, 10,\n",
+       "        8, 12, 14, 15,  0,  6, 15, 16,  3,  3, 15, 10,  9,  8,  2, 13, 15,\n",
+       "       15,  7,  6, 15, 12,  8,  4, 11,  3,  5, 11, 11, 15, 11,  7, 11,  2,\n",
+       "       16,  8, 13,  7, 15, 10, 15,  7, 14,  9, 14,  8, 11, 15, 14, 16,  7,\n",
+       "        0, 11], dtype=int64)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "4fa4e435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abc = preds1.astype(int).flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "afe6ed7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = (lb.inverse_transform((abc)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8577b56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predictedvalues</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female_calm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male_angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male_fearful</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>female_sad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>female_sad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>female_happy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>female_happy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   predictedvalues\n",
+       "0      female_calm\n",
+       "1       male_angry\n",
+       "2  female_surprise\n",
+       "3     male_fearful\n",
+       "4       female_sad\n",
+       "5  female_surprise\n",
+       "6       female_sad\n",
+       "7     female_happy\n",
+       "8     female_happy\n",
+       "9  female_surprise"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preddf = pd.DataFrame({'predictedvalues': predictions})\n",
+    "preddf[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6c34fc78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actual=y_test.argmax(axis=1)\n",
+    "abc123 = actual.astype(int).flatten()\n",
+    "actualvalues = (lb.inverse_transform((abc123)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b94e761e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actualvalues</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female_calm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>female_happy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>female_calm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>female_angry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>female_happy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>female_surprise</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      actualvalues\n",
+       "0      female_calm\n",
+       "1  female_surprise\n",
+       "2  female_surprise\n",
+       "3     female_happy\n",
+       "4      female_calm\n",
+       "5     female_angry\n",
+       "6  female_surprise\n",
+       "7  female_surprise\n",
+       "8     female_happy\n",
+       "9  female_surprise"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actualdf = pd.DataFrame({'actualvalues': actualvalues})\n",
+    "actualdf[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "825185d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finaldf = actualdf.join(preddf)"
+   ]
   }
  ],
  "metadata": {
