Module Working fine for recording

--- a/draft_1.ipynb
+++ b/draft_1.ipynb
@@ -4087,9 +4087,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "debce637",
+   "metadata": {},
+   "source": [
+    "<h1><b>Live Demo </b></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><b>Will be making prediction for the audio recorder via audio recorder module</b></p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from audio_recorder import AudioRecorder \n",
+    "recorder = AudioRecorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording...\n",
+      "Audio Recorded!\n"
+     ]
+    }
+   ],
+   "source": [
+    "audio = recorder.record()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audio File Name: recorded.wav\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Audio File Name:\", audio )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debce637",
    "metadata": {},
    "outputs": [],
    "source": []
